@@ -1,6 +1,7 @@
 4.10_03 0000-00-00 Duncan Ferguson <duncan_ferguson@user.sf.net>
 - Fix for multiple range expansion, as in 'h{a,b}{1,2}' (Github issue #97) (Thanks to lazyfrosch)
 - Upgrade Perl::Tidy requirement to version 20171214 (Github issue #99) (Thanks to eserte)
+- Add in 'external command pipe' to allow for some commands being passed in from the command line
 
 4.10_02 2017-08-08 Duncan Ferguson <duncan_ferguson@user.sf.net>
 - Include coverage tests in the resources
